# stm32-substrate

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.claude/: stm32-tools.local.jsonc.example
.claude-plugin/: marketplace.json  plugin.json
.claude/commands/: stm32agent.md  stm32build.md  stm32debug.md  stm32prog.md  stm32project.md
.github/workflows/: ci.yml  release.yml
src/embedagents/stm32/: __init__.py  __main__.py  context.py  errors.py  logging_setup.py  progress.py  resolution.py  subprocess_runner.py
src/embedagents/stm32/cli/: _mx.py  (+6 more)
src/stm32_substrate/: __init__.py  _jsonc.py  context.py  errors.py  logging_setup.py  progress.py  resolution.py  subprocess_runner.py
src/stm32_substrate/cli/: __init__.py  _build.py  _debug.py  _mx.py  _prog.py  _serialize.py  _vcp.py
src/stm32_substrate/cubeide/: __init__.py  client.py  cproject.py  headless.py  presets.py  results.py  workspace.py
src/stm32_substrate/cubemx/: __init__.py  client.py  launcher.py  results.py  runner.py
src/stm32_substrate/cubeprogrammer/: __init__.py  client.py  codes.py  diagnose.py  external_loader.py  parsers.py  results.py
src/stm32_substrate/debug/: __init__.py  client.py  gdb.py  gdbserver.py  parsers.py  pipereader.py  results.py  session.py  svd.py
src/stm32_substrate/platform/: __init__.py  locking.py  process.py
src/stm32_substrate/schemas/: stm32-project.schema.json  stm32-runtime-defaults.schema.json  stm32-tools.local.schema.json
src/stm32_substrate/signing/: __init__.py  client.py  results.py
src/stm32_substrate/vcp/: __init__.py  client.py  discovery.py  reader.py  results.py
tests/: conftest.py  test_board_recipe_suite.py  test_cli_build.py  test_cli_debug.py  test_cli_help_ascii.py  test_cli_prog.py  test_cli_sign.py  test_cli_vcp.py  test_context.py  test_cubeide_build.py  test_cubeide_build_kwargs_hardware.py  test_cubeide_build_smoke.py  test_cubeide_cproject.py  test_cubeide_find_project.py  test_cubeide_hardware.py  test_cubeide_skeleton.py  test_cubeide_workspace.py  test_cubemx_generate.py  test_cubemx_hardware.py  test_cubemx_runner.py  test_cubemx_skeleton.py  test_cubeprogrammer_atomic_control.py  test_cubeprogrammer_connect.py  test_cubeprogrammer_diagnose.py  test_cubeprogrammer_discovery.py  test_cubeprogrammer_erase.py  test_cubeprogrammer_flash_atomic.py  test_cubeprogrammer_flash_compound.py  test_cubeprogrammer_flash_external.py  test_cubeprogrammer_hardfault.py  test_cubeprogrammer_hardware.py  test_cubeprogrammer_hardware_destructive.py  test_cubeprogrammer_list_probes.py  test_cubeprogrammer_option_bytes.py  test_cubeprogrammer_option_bytes_write.py  test_cubeprogrammer_parsers.py  test_cubeprogrammer_ping_swd.py  test_cubeprogrammer_read.py  test_cubeprogrammer_realboard_banners.py  test_cubeprogrammer_skeleton.py  (+30 more)
tests/eval/: conftest.py  test_scaffold_eval.py  test_stm32agent_eval.py  test_stm32build_eval.py  test_stm32debug_eval.py  test_stm32diag_eval.py  test_stm32prog_eval.py  test_stm32project_eval.py  test_t3_loops_eval.py
tests/fixtures/: fixture-spec.md
tests/fixtures/cubeide/: fixture-spec.md
tests/fixtures/cubemx/: fixture-spec.md
tests/fixtures/cubeprogrammer/: fixture-spec.md
tests/fixtures/debug/: fixture-spec.md
tests/fixtures/projects/: manifest.jsonc
tests/fixtures/signing/: fixture-spec.md
tools/: capture-banner.sh  capture-mi-records.py  check-hw-env.ps1  check-hw-env.sh  test-release-linux.sh  test-release-local-wheel.ps1  test-release-local-wheel.sh  test-release-windows.ps1  verify-res054.ps1
(+164 files in other folders)
